# celus-nigiri

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.gitlab/: pre-commit.yml  run-tests.yml
celus_nigiri/: __init__.py  celus.py  client.py  counter4.py  counter5.py  counter51.py  error_codes.py  record.py  utils.py
celus_nigiri/csv_detect/: __init__.py  __main__.py
celus_nigiri/download/: __main__.py
src/celus_nigiri/: celus.py  client.py  counter4.py  counter5.py  counter51.py  exceptions.py  record.py  utils.py
src/celus_nigiri/csv_detect/: __main__.py
src/celus_nigiri/download/: __main__.py
tests/: test_celus.py  test_counter4.py  test_counter5.py  test_counter51.py  test_csv.py  test_proxy.py  test_record.py  test_sushi5.py  test_sushi51.py  test_utils.py
tests/data/counter4/: BR1-semicolons.csv  counter4_br2_one_month.tsv
tests/data/counter5/: DR_wrong_date_all.json  DR_wrong_date_some.json  IR_M1-commas.csv  TR-tabs.tsv  bloomsbery-parent.IR_M1.json  counter5_ir.json  counter5_tr_bad_filter_dates.json  dr-extra-ids.json  extra_body_wrap-exception.json  extra_body_wrap.json  no_data.json  no_performance.json  reports.json
tests/data/counter51/: DR_sample_r51_bad_filter_dates.json  DR_sample_r51_wrong_months_all.json  DR_sample_r51_wrong_months_some.json  naked_error_3000.json  naked_error_lowercase.json  naked_errors.json  reports_r51.json  stringified_error.json
tests/data/custom/: custom_data-2d-3x2x3-org-isodate.csv
