[build-system]
requires = ["poetry>=1.1.13"]
build-backend = "poetry.masonry.api"

[tool.ruff]
line-length = 100
src = ["celus_nigiri", "tests"]

[tool.ruff.lint]
fixable = ['I001']  # isort: imports are incorrectly sorted
select = [
	# Pyflakes
	"F",
	# pycodestyle
	"E",
	# isort
	"I",
]

[tool.ruff.lint.isort]
known-first-party = ["celus_nigiri"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["B011"]  # test files should have asserts

[tool.pytest.ini_options]
testpaths = "tests/"

[tool.poetry]
name = "celus-nigiri"
version = "3.0.0"
description = "Library for downloading and parsing counter-like data."
authors = ["Beda Kosata <beda@bigdigdata.com>", "Stepan Henek <stepan@bigdigdata.com>"]
license = "MIT"
classifiers = [
	"Programming Language :: Python :: 3",
	"Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = "^3.8.9"

dateparser = "~1.1.1"
chardet = "^5.0.0"
ijson = "~3.2.3"
celus-pycounter = "~4.0.1"
python-decouple = "^3.6"
xmltodict = "~0.13.0"

[tool.poetry.scripts]
nigiri-download = 'celus_nigiri.download.__main__:main'
nigiri-csv = 'celus_nigiri.csv_detect.__main__:main'


[tool.poetry.dev-dependencies]
flake8 = "~6.1.0"
pre-commit = "~3.5.0"
pytest = "~7.4.3"
pytest-cov = "~4.1.0"
requests-mock = "~1.11.0"
ruff = "~0.3.2"
