[project]
name = "celus-nigiri"
version = "5.0.1"
description = "Library for downloading and parsing counter-like data."
authors = [
	{ name = "Beda Kosata", email = "beda@bigdigdata.com" },
	{ name = "Stepan Henek", email = "stepan@bigdigdata.com" },
]
requires-python = ">=3.12,<4"
license = "MIT"
classifiers = [
	"Programming Language :: Python :: 3",
	"Topic :: Software Development :: Libraries",
]
dependencies = [
	"chardet>=5.0.0,<6",
	"ijson~=3.4.0",
	"celus-pycounter~=5.0.0",
	"python-decouple~=3.6",
	"python-dateutil~=2.9",
	"xmltodict~=0.13.0",
]

[dependency-groups]
dev = [
	"pre-commit~=4.3.0",
	"pytest~=8.4.1",
	"pytest-cov~=6.2.1",
	"pytest-responses~=0.5.1",
	"responses~=0.25.3",
	"ruff~=0.12.9",
]

[project.scripts]
nigiri-download = "celus_nigiri.download.__main__:main"
nigiri-csv = "celus_nigiri.csv_detect.__main__:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
src = ["celus_nigiri", "tests"]

[tool.ruff.lint]
fixable = ['I001'] # isort: imports are incorrectly sorted
select = [
	# Pyflakes
	"F",
	# pycodestyle
	"E",
	# isort
	"I",
]

[tool.ruff.lint.isort]
known-first-party = ["celus_nigiri"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["B011"] # test files should have asserts

[tool.pytest.ini_options]
testpaths = "tests/"
